[project]
name = "comfyui-static-primitives"
description = "Adds Static Primitives to ComfyUI. Mostly to work with reroute nodes"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/80sVectorz/ComfyUI-Static-Primitives"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Static-Primitives"
Icon = ""
